--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -7,6 +7,13 @@
   <title>Albums</title>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+    }
+  </style>
 </head>
 
 <body>
@@ -41,6 +48,9 @@
   </div>
   <button class="play">PLAY</button>
   <button class="pause">PAUSE</button>
+  <button class="volumeMinus">-</button>
+  <button class="volumePlus">+</button>
+  <button class="seek">seek</button>
 
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
   <script>
@@ -66,13 +76,12 @@
         // play(device_id);
 
         document.querySelector('.play').addEventListener("click", (e) => {
-          play();
+          player.resume();
         });
 
         document.querySelectorAll('.track').forEach(el => {
           el.addEventListener("click", (e) => {
-            console.log(e.target.dataset.id);
-            play(device_id, e.target.dataset.id);
+            play(device_id, e.target.dataset.id, player);
           });
         });
 
@@ -84,6 +93,8 @@
 
       });
 
+
+
       // Not Ready
       player.addListener('not_ready', ({ device_id }) => {
         console.log('Device ID has gone offline', device_id);
@@ -91,23 +102,52 @@
 
       // Connect to the player!
       player.connect();
+
+      document.querySelector('.volumeMinus').addEventListener('click', async () => {
+        const currentVolume = await player.getVolume();
+        if (currentVolume < 0.1) {
+          console.log(currentVolume);
+          return;
+        }
+
+        await player.setVolume(currentVolume - 0.1);
+        console.log(currentVolume);
+      });
+
+      document.querySelector('.volumePlus').addEventListener('click', async () => {
+        const currentVolume = await player.getVolume();
+        if (currentVolume > 0.9) {
+          console.log(currentVolume);
+          return;
+        }
+
+        await player.setVolume(currentVolume + 0.1);
+        console.log(currentVolume);
+      });
+
+      document.querySelector('.seek').addEventListener('click', async () => {
+        const currentState = await player.getCurrentState();
+        const currentPosition = currentState.position;
+        player.seek(currentPosition + 10 * 1000);
+      })
     };
 
 
-    function play(device_id, track_id) {
+
+    function play(device_id, track_id, player) {
       const token = '<%= access_token %>';
+      player.getVolume().then(volume => console.log('vlume' + volume));
       let url = 'https://api.spotify.com/v1/me/player/play';
       if (device_id !== undefined) {
         url += `?device_id=${device_id}`;
       }
-      console.log(url);
       $.ajax({
         url,
         type: "PUT",
         data: `{"uris": ["spotify:track:${track_id}"]}`,
         beforeSend: function (xhr) { xhr.setRequestHeader('Authorization', 'Bearer ' + token); },
         success: function (data) {
-          console.log(data)
+          // console.log(data)
         }
       });
     }
