--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -9,6 +9,7 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -18,6 +19,16 @@
 
 <body>
   <div class="content">
+    <div class="navigation">
+      <ul>
+        <% for (let i = 0; i < pages_count; i++) { %>
+          <li><a href="http://localhost:5000/albums?offset=<%= i*limit %>""><%= i+1 %></a></li>
+        <% } %>
+      </ul>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
     <ul>
       <% names.forEach(album=> { %>
         <li>
@@ -28,29 +39,33 @@
               <%= album.artist %>
             </span> -
             <span>
-              <%= album.name %>
+              <a target="_blank" href="<%= album.link %>"><%= album.name %></a>
             </span>
           </p>
-          Tracks:
-          <ul>
-            <% album.tracks.forEach(track=> { %>
-              <li>
-                <p data-id="<%= track.id %>" class="track" style="cursor: pointer">
-                  <%= track.name %>
-                </p>
-              </li>
-              <% }) %>
-
-          </ul>
+          <div class="tracks">
+            Tracks:
+            <ul class="tracks-list">
+              <% album.tracks.forEach(track=> { %>
+                <li>
+                  <p data-id="<%= track.id %>" class="track" style="cursor: pointer">
+                    <%= track.name %>
+                  </p>
+                </li>
+                <% }) %>
+  
+            </ul>
+          </div>
         </li>
         <% }) %>
     </ul>
   </div>
-  <button class="play">PLAY</button>
-  <button class="pause">PAUSE</button>
-  <button class="volumeMinus">-</button>
-  <button class="volumePlus">+</button>
-  <button class="seek">seek</button>
+  <div class="player-controls">
+    <button class="play">PLAY</button>
+    <button class="pause">PAUSE</button>
+    <button class="volumeMinus">-</button>
+    <button class="volumePlus">+</button>
+    <button class="seek">seek</button>
+  </div>
 
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
   <script>
@@ -164,6 +179,14 @@
         }
       });
     }
+
+    document.querySelectorAll('.tracks').forEach(el => el.addEventListener('click', e => {
+      console.log('klek');
+      // e.style.display = 'block';
+      console.log(e.children);
+    }))
+    
+    
   </script>
 </body>
 
