--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -30,19 +30,20 @@
       </ul>
     </div>
     <ul>
-      <% names.forEach(album=> { %>
+      <% albums.forEach(album=> { %>
         <li>
-
-          <img src="<%= album.picture %>" />
-          <p>
-            <span>
-              <%= album.artist %>
-            </span> -
-            <span>
-              <a target="_blank" href="<%= album.link %>"><%= album.name %></a>
-            </span>
-          </p>
-          <div class="tracks">
+          <div class="album-info">
+            <img src="<%= album.picture %>" />
+            <p>
+              <span>
+                <%= album.artist %>
+              </span> -
+              <span>
+                <a target="_blank" href="<%= album.link %>"><%= album.name %></a>
+              </span>
+            </p>
+          </div>
+          <div class="album-tracks">
             Tracks:
             <ul class="tracks-list" style="display: none">
               <% album.tracks.forEach(track=> { %>
@@ -52,13 +53,18 @@
                   </p>
                 </li>
                 <% }) %>
-  
             </ul>
           </div>
+          
         </li>
         <% }) %>
     </ul>
   </div>
+  <footer>
+    <p>
+      footer
+    </p>
+  </footer>
   <div class="player-controls">
     <button class="play">PLAY</button>
     <button class="pause">PAUSE</button>
@@ -180,7 +186,7 @@
       });
     }
 
-    document.querySelectorAll('.tracks').forEach(el => el.addEventListener('click', e => {
+    document.querySelectorAll('.album-tracks').forEach(el => el.addEventListener('click', e => {
       console.log('klek');
       // e.style.display = 'block';
       console.log(e.target.children[0].style.display);
