--- a/views/pages/albums.ejs
+++ b/views/pages/albums.ejs
@@ -24,7 +24,7 @@
   <div class="content">
     <div class="navigation">
       <ul>
-        <% for (let i = 0; i < pages_count; i++) { %>
+        <% for (let i = 0; i < pagesCount; i++) { %>
           <li><a href="http://localhost:5000/albums?offset=<%= i*limit %>""><%= i+1 %></a></li>
         <% } %>
       </ul>
@@ -80,7 +80,7 @@
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
   <script>
     window.onSpotifyWebPlaybackSDKReady = () => {
-      const token = '<%= access_token %>';
+      const token = '<%= accessToken %>';
       const player = new Spotify.Player({
         name: 'Web Playback SDK Quick Start Player',
         getOAuthToken: cb => { cb(token); }
@@ -160,7 +160,7 @@
 
 
     function play(device_id, track_id, player) {
-      const token = '<%= access_token %>';
+      const token = '<%= accessToken %>';
       player.getVolume().then(volume => console.log('vlume' + volume));
       let url = 'https://api.spotify.com/v1/me/player/play';
       if (device_id !== undefined) {
@@ -178,7 +178,7 @@
     }
 
     function pause() {
-      const token = '<%= access_token %>';
+      const token = '<%= accessToken %>';
       $.ajax({
         url: "https://api.spotify.com/v1/me/player/pause",
         type: "PUT",
